--- a/src/ProfileScene.fxml
+++ b/src/ProfileScene.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -36,7 +37,9 @@
       </ScrollPane>
       <Text layoutX="85.0" layoutY="107.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-weight: 900;" text="Borrowed Books: " />
       <Text layoutX="85.0" layoutY="383.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-weight: 900; -fx-underline: true;" text="Return a Book: " />
-      <TextField layoutX="85.0" layoutY="396.0" promptText="Enter ISBN Code" />
-      <Button fx:id="ReturnBookBtn" layoutX="275.0" layoutY="396.0" mnemonicParsing="false" onAction="#returnBook" style="-fx-background-color: #00bfff; -fx-border-color: black;" text="Return Book" />
+      <TextField fx:id="returnISBNTextField" layoutX="85.0" layoutY="396.0" promptText="Enter ISBN Code" />
+      <Button fx:id="ReturnBookBtn" layoutX="354.0" layoutY="431.0" mnemonicParsing="false" onAction="#returnBook" style="-fx-background-color: #00bfff; -fx-border-color: black;" text="Return Book" />
+      <DatePicker fx:id="datePicker" layoutX="84.0" layoutY="432.0" promptText="Enter Date of Return" />
+      <Text layoutX="84.0" layoutY="343.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Note:" />
    </children>
 </AnchorPane>
